fix: h2 size and align on phone

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,4 +66,8 @@ html body {
   * {
     font-size: 20px;
   }
+  h2 {
+    font-size: 28px;
+    text-align: center;
+  }
 }
